--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,7 @@
   "builds": [
     {
       "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "frontend/dist" }
+      "use": "@vercel/static-build"
     },
     {
       "src": "backend/src/index.ts",
@@ -13,6 +12,6 @@
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "backend/src/index.ts" },
-    { "src": "/(.*)", "dest": "frontend/dist/$1" }
+    { "src": "/(.*)", "dest": "frontend/$1" }
   ]
 }
